@@ -1,4 +1,18 @@
-// $Header: /cvsroot/tikiwiki/tiki/lib/tiki-js.js,v 1.15 2003-09-24 14:02:20 dheltzel Exp $
+// $Header: /cvsroot/tikiwiki/tiki/lib/tiki-js.js,v 1.16 2003-10-02 14:18:07 lrargerich Exp $
+
+function toggle_dynamic_var($name) {
+	name1 = 'dyn_'+$name+'_display';
+	name2 = 'dyn_'+$name+'_edit';
+	if(document.getElementById(name1).style.display == "none") {
+		document.getElementById(name2).style.display = "none";
+		document.getElementById(name1).style.display = "inline";
+	} else {
+		document.getElementById(name1).style.display = "none";
+		document.getElementById(name2).style.display = "inline";
+	
+	}
+	
+}
 
 function chgArtType() {
 	if (document.getElementById('articletype').value != 'Review') {
